changed segue to game and added view controller.

--- a/AlgorithProject/View/Base.lproj/Main.storyboard
+++ b/AlgorithProject/View/Base.lproj/Main.storyboard
@@ -9,6 +9,21 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Programming View Controller-->
+        <scene sceneID="hIg-XK-kb8">
+            <objects>
+                <viewController id="inJ-1I-OZn" customClass="ProgrammingViewController" customModule="AlgorithProject" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tJ4-Jn-1Xz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="ggr-F7-yNZ"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1Ag-ni-qOU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3049" y="818"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -17,14 +32,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8w1-MU-9TA">
-                                <rect key="frame" x="293" y="630" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <segue destination="l4G-Re-4b5" kind="show" id="1BE-z4-cPl"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bgb-ug-Ce9">
                                 <rect key="frame" x="139" y="630" width="115" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -69,6 +76,14 @@
                                     <segue destination="qNH-fY-f8G" kind="showDetail" id="8sx-dC-0BJ"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8w1-MU-9TA">
+                                <rect key="frame" x="293" y="625" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Game"/>
+                                <connections>
+                                    <segue destination="inJ-1I-OZn" kind="showDetail" id="Hw9-QK-2sL"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -76,7 +91,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="152.80000000000001" y="108.39580209895054"/>
+            <point key="canvasLocation" x="2359" y="-105"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="gfi-u5-DSc">
@@ -300,7 +315,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OEV-HS-lh4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1583" y="115"/>
+            <point key="canvasLocation" x="-2457" y="426"/>
         </scene>
         <!--Impact View Controller-->
         <scene sceneID="aFU-3V-lYx">
@@ -353,7 +368,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CwD-AA-CYQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="888.79999999999995" y="107.49625187406298"/>
+            <point key="canvasLocation" x="-1750" y="377"/>
         </scene>
         <!--Internet Detail View Controller-->
         <scene sceneID="Aqf-oi-5Dm">
@@ -390,7 +405,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6ev-Jw-BGw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2209" y="1008"/>
+            <point key="canvasLocation" x="-150" y="958"/>
         </scene>
         <!--Creativity View Controller-->
         <scene sceneID="6V2-x2-Sj8">
@@ -449,7 +464,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FxS-7n-0ai" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3121" y="204"/>
+            <point key="canvasLocation" x="-553" y="-624"/>
         </scene>
         <!--Root View Controller-->
         <scene sceneID="9Iv-wY-ebc">
@@ -481,7 +496,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IKA-MB-BMv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3481" y="1066"/>
+            <point key="canvasLocation" x="428" y="958"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="fPi-V3-Q7Y">
@@ -497,7 +512,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8Cc-Yc-2K3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1836" y="1249"/>
+            <point key="canvasLocation" x="-1751" y="1137"/>
         </scene>
         <!--Split View Controller-->
         <scene sceneID="kgh-cd-gMM">
@@ -510,7 +525,7 @@
                 </splitViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lWq-G2-aco" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="594" y="1200"/>
+            <point key="canvasLocation" x="-1150" y="107"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="XAb-pF-03b">
@@ -528,7 +543,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="skL-fQ-4kh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2298" y="400"/>
+            <point key="canvasLocation" x="-1151" y="-599"/>
         </scene>
     </scenes>
     <resources>
