--- a/AlgorithProject/View/Base.lproj/Main.storyboard
+++ b/AlgorithProject/View/Base.lproj/Main.storyboard
@@ -126,7 +126,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nYM-v3-aLs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-529" y="2375"/>
+            <point key="canvasLocation" x="-1350" y="1532"/>
         </scene>
         <!--Abstraction View Controller-->
         <scene sceneID="yhG-1j-G8h">
@@ -170,7 +170,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Ze-m0-kn4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="153" y="2373"/>
+            <point key="canvasLocation" x="-689" y="1531"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="PGa-L7-0Qs">
@@ -206,7 +206,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2oN-el-wuQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="796" y="2374"/>
+            <point key="canvasLocation" x="7" y="1531"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="6D0-gc-etd">
@@ -242,7 +242,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YdQ-Wi-KOW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1490" y="2375"/>
+            <point key="canvasLocation" x="708" y="1531"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tVz-h4-ncc">
@@ -252,13 +252,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Abstractions - And Gate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cwY-HP-UnB">
-                                <rect key="frame" x="83" y="33" width="209" height="90"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="And Gate" translatesAutoresizingMaskIntoConstraints="NO" id="rUp-j0-dcQ">
                                 <rect key="frame" x="67" y="232" width="240" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -271,6 +264,13 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Abstractions - And Gate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cwY-HP-UnB">
+                                <rect key="frame" x="83" y="20" width="209" height="90"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <viewLayoutGuide key="safeArea" id="NSg-qM-EXv"/>
@@ -278,7 +278,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ie1-wN-adP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2281" y="2376"/>
+            <point key="canvasLocation" x="1385" y="1531"/>
         </scene>
         <!--Algorithm View Controller-->
         <scene sceneID="U7X-Vf-urD">
@@ -483,7 +483,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="flA-0X-9GG" kind="showDetail" identifier="Show Detail" id="bw6-7G-Whe"/>
+                                    <segue destination="flA-0X-9GG" kind="showDetail" identifier="showDetail" id="bw6-7G-Whe"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -557,6 +557,6 @@
         <image name="swiftSample" width="1248" height="1244"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="bw6-7G-Whe"/>
+        <segue reference="5RC-3i-iYg"/>
     </inferredMetricsTieBreakers>
 </document>
