--- a/AlgorithProject/View/Base.lproj/Main.storyboard
+++ b/AlgorithProject/View/Base.lproj/Main.storyboard
@@ -84,6 +84,11 @@
                                     <segue destination="qNH-fY-f8G" kind="showDetail" id="8sx-dC-0BJ"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EWD-2E-GW4">
+                                <rect key="frame" x="12" y="554" width="126" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="DataView Button"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -536,7 +541,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="SgL-sX-aoL" customClass="BucketItemCell" customModule="AlgorithProject" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="SgL-sX-aoL" customClass="dataIdentifier">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="SgL-sX-aoL" id="UhU-aN-AgI" customClass="BucketItemCell" customModule="AlgorithProject" customModuleProvider="target">
@@ -551,14 +556,14 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="bucket item here" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aJX-Qx-dhG">
-                                            <rect key="frame" x="227" y="11" width="148" height="21"/>
+                                            <rect key="frame" x="37" y="0.0" width="148" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QJN-y1-PYa">
-                                            <rect key="frame" x="126" y="11" width="64" height="21"/>
+                                            <rect key="frame" x="303" y="22" width="64" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                             <nil key="textColor"/>
@@ -566,6 +571,11 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="bucketItemSignature" destination="QJN-y1-PYa" id="TYm-6a-h9i"/>
+                                    <outlet property="bucketItemSymbol" destination="bt0-0E-LOa" id="4FX-qB-DXQ"/>
+                                    <outlet property="bucketItemText" destination="aJX-Qx-dhG" id="YM6-wx-EEb"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -576,7 +586,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bf2-cn-5xZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5077.6000000000004" y="1187.8560719640182"/>
+            <point key="canvasLocation" x="4634" y="-106"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="XAb-pF-03b">
